First test of mobile styles for chapters

--- a/scss/_media-breakpoints.scss
+++ b/scss/_media-breakpoints.scss
@@ -59,6 +59,16 @@
   }
 
   /**============================================
+   *                Larger than - 1400
+   @include respond(break-greater-1400) {}
+   *=============================================**/
+
+  @if $breakpoint == break-greater-1400 {
+    @media (min-width: 87.5em) {
+      @content;
+    } //1400px
+  }
+  /**============================================
    *                Monitor Medium - 1400
    @include respond(break-1600) {}
    *=============================================**/
