--- a/scss/_chapterTemplate.scss
+++ b/scss/_chapterTemplate.scss
@@ -4,6 +4,9 @@
 
 h1 {
   font-size: 5rem;
+  @include respond(break-1000) {
+    font-size: 2rem;
+  }
 }
 
 h2 {
@@ -32,6 +35,16 @@ h2 {
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
+      @include respond(break-1000) {
+        background-size: cover;
+        background-position: 60% 45%;
+        background-image: linear-gradient(
+            to top,
+            rgba(0, 0, 0, 1) 15%,
+            rgba(0, 0, 0, 0) 25% 55%
+          ),
+          url('../img/prologue.jpg');
+      }
     }
     &--c1 {
       background-image: linear-gradient(
@@ -43,6 +56,23 @@ h2 {
         url('../img/chapter1.jpg');
       background-repeat: no-repeat;
       background-position: 50% 45%;
+      @include respond(break-greater-1400) {
+        background-image: linear-gradient(
+            to right,
+            rgba(0, 0, 0, 1) 25%,
+            rgba(0, 0, 0, 0) 25% 75%,
+            rgba(0, 0, 0, 1) 75%
+          ),
+          url('../img/chapter1.jpg');
+      }
+      @include respond(break-1000) {
+        background-image: linear-gradient(
+            to top,
+            rgba(0, 0, 0, 1) 15%,
+            rgba(0, 0, 0, 0) 25% 55%
+          ),
+          url('../img/chapter1.jpg');
+      }
     }
     &--c2 {
       background-image: linear-gradient(
@@ -53,6 +83,26 @@ h2 {
         url('../img/chapter2.jpg');
       background-repeat: no-repeat;
       background-position: 50% 45%;
+      @include respond(break-greater-1400) {
+        background-position: 0% 45%;
+        background-image: linear-gradient(
+            to right,
+            rgba(0, 0, 0, 1) 20%,
+            rgba(0, 0, 0, 0) 25% 55%,
+            rgba(0, 0, 0, 1) 80%
+          ),
+          url('../img/chapter2.jpg');
+      }
+      @include respond(break-1000) {
+        background-position: 80% 45%;
+        background-size: cover;
+        background-image: linear-gradient(
+            to top,
+            rgba(0, 0, 0, 1) 15%,
+            rgba(0, 0, 0, 0) 25% 55%
+          ),
+          url('../img/chapter2.jpg');
+      }
     }
     &--c3 {
       background-image: linear-gradient(
@@ -63,6 +113,23 @@ h2 {
         url('../img/chapter3.jpg');
       background-repeat: no-repeat;
       background-position: 50% 45%;
+      @include respond(break-greater-1400) {
+        background-image: linear-gradient(
+            to right,
+            rgba(0, 0, 0, 1) 25%,
+            rgba(0, 0, 0, 0) 30% 85%,
+            rgba(0, 0, 0, 1) 90%
+          ),
+          url('../img/chapter3.jpg');
+      }
+      @include respond(break-1000) {
+        background-image: linear-gradient(
+            to top,
+            rgba(0, 0, 0, 1) 15%,
+            rgba(0, 0, 0, 0) 25% 55%
+          ),
+          url('../img/chapter3.jpg');
+      }
     }
     &--c4 {
       background-image: linear-gradient(
@@ -74,6 +141,23 @@ h2 {
         url('../img/chapter4.jpg');
       background-repeat: no-repeat;
       background-position: 50% 45%;
+      @include respond(break-greater-1400) {
+        background-image: linear-gradient(
+            to right,
+            rgba(0, 0, 0, 1) 35%,
+            rgba(0, 0, 0, 0) 45% 65%,
+            rgba(0, 0, 0, 1) 75%
+          ),
+          url('../img/chapter4.jpg');
+      }
+      @include respond(break-1000) {
+        background-image: linear-gradient(
+            to top,
+            rgba(0, 0, 0, 1) 15%,
+            rgba(0, 0, 0, 0) 25% 55%
+          ),
+          url('../img/chapter4.jpg');
+      }
     }
     &--c5 {
       background-image: linear-gradient(
@@ -85,6 +169,23 @@ h2 {
         url('../img/chapter5.jpg');
       background-repeat: no-repeat;
       background-position: 50% 45%;
+      @include respond(break-greater-1400) {
+        background-image: linear-gradient(
+            to right,
+            rgba(0, 0, 0, 1) 25%,
+            rgba(0, 0, 0, 0) 30% 70%,
+            rgba(0, 0, 0, 1) 75%
+          ),
+          url('../img/chapter5.jpg');
+      }
+      @include respond(break-1000) {
+        background-image: linear-gradient(
+            to top,
+            rgba(0, 0, 0, 1) 15%,
+            rgba(0, 0, 0, 0) 25% 55%
+          ),
+          url('../img/chapter5.jpg');
+      }
     }
     &--c6 {
       background-image: linear-gradient(
@@ -95,6 +196,25 @@ h2 {
         url('../img/chapter3-2.jpg');
       background-repeat: no-repeat;
       background-position: 50% 45%;
+      @include respond(break-greater-1400) {
+        background-position: 0% 45%;
+        background-image: linear-gradient(
+            to right,
+            rgba(0, 0, 0, 1) 20%,
+            rgba(0, 0, 0, 0) 25% 65%,
+            rgba(0, 0, 0, 1) 80%
+          ),
+          url('../img/chapter3-2.jpg');
+      }
+      @include respond(break-1000) {
+        background-position: 75% 45%;
+        background-image: linear-gradient(
+            to top,
+            rgba(0, 0, 0, 1) 15%,
+            rgba(0, 0, 0, 0) 25% 55%
+          ),
+          url('../img/chapter3-2.jpg');
+      }
     }
   }
 
@@ -103,6 +223,9 @@ h2 {
     width: 40%;
     display: flex;
     flex-direction: column;
+    @include respond(break-1000) {
+      width: 90%;
+    }
 
     &::after {
       z-index: -1;
@@ -127,39 +250,68 @@ h2 {
 .title {
   display: flex;
   flex-direction: column;
+  @include respond(break-1000) {
+    flex-direction: row;
+    align-items: center;
+  }
   &-landing {
     position: absolute;
     color: $color-white;
     &--prologue {
       bottom: 40%;
       left: 6rem;
+      @include respond(break-1000) {
+        bottom: 3rem;
+      }
     }
     &--c1 {
       bottom: 40%;
       left: 3rem;
+      @include respond(break-1000) {
+        bottom: 3rem;
+      }
     }
     &--c2 {
       bottom: 40%;
       left: 3rem;
+      @include respond(break-1000) {
+        bottom: 3rem;
+      }
     }
     &--c3 {
       bottom: 40%;
       left: 3rem;
+      @include respond(break-1000) {
+        bottom: 3rem;
+      }
     }
     &--c4 {
       bottom: 40%;
       left: 3rem;
+      @include respond(break-1000) {
+        bottom: 3rem;
+      }
     }
     &--c5 {
       bottom: 40%;
       left: 3rem;
+      @include respond(break-1000) {
+        bottom: 3rem;
+      }
     }
     &--c6 {
       bottom: 40%;
       left: 3rem;
+      @include respond(break-1000) {
+        bottom: 3rem;
+      }
     }
     & > *:not(:first-child) {
       margin-top: 1rem;
+      @include respond(break-1000) {
+        margin-top: 0;
+        margin-left: 1rem;
+      }
     }
   }
   &-content {
@@ -188,6 +340,8 @@ h2 {
 
     &:hover {
       background-color: $color-dark-gray;
+    }
+    @include respond(break-1000) {
     }
   }
 }
