--- a/css/style.css
+++ b/css/style.css
@@ -622,7 +622,7 @@ h2 {
     @media (min-width: 87.5em) {
       .chapter-landing--c2 {
         background-position: 0% 45%;
-        background-image: linear-gradient(to right, black 20%, rgba(0, 0, 0, 0) 25% 55%, black 80%), url("../img/chapter2.jpg"); } }
+        background-image: linear-gradient(to right, black 20%, rgba(0, 0, 0, 0) 25% 55%, black 78%), url("../img/chapter2.jpg"); } }
     @media (max-width: 62.5em) {
       .chapter-landing--c2 {
         background-position: 80% 45%;
@@ -698,7 +698,7 @@ h2 {
    *=============================================**/ }
     @media (min-width: 87.5em) {
       .chapter-landing--c3 {
-        background-image: linear-gradient(to right, black 25%, rgba(0, 0, 0, 0) 30% 85%, black 90%), url("../img/chapter3.jpg"); } }
+        background-image: linear-gradient(to right, black 25%, rgba(0, 0, 0, 0) 30% 80%, black 85%), url("../img/chapter3.jpg"); } }
     @media (max-width: 62.5em) {
       .chapter-landing--c3 {
         background-image: linear-gradient(to top, black 15%, rgba(0, 0, 0, 0) 25% 55%), url("../img/chapter3.jpg"); } }
@@ -921,7 +921,7 @@ h2 {
     @media (min-width: 87.5em) {
       .chapter-landing--c6 {
         background-position: 0% 45%;
-        background-image: linear-gradient(to right, black 20%, rgba(0, 0, 0, 0) 25% 65%, black 80%), url("../img/chapter3-2.jpg"); } }
+        background-image: linear-gradient(to right, black 20%, rgba(0, 0, 0, 0) 25% 65%, black 78%), url("../img/chapter3-2.jpg"); } }
     @media (max-width: 62.5em) {
       .chapter-landing--c6 {
         background-position: 75% 45%;
@@ -983,46 +983,46 @@ h2 {
 
 .title {
   display: flex;
-  flex-direction: column;
-  /**============================================
+  flex-direction: column; }
+  .title-landing {
+    position: absolute;
+    color: white;
+    /**============================================
    *             Mobile Small - 600
 @include respond(break-600) {}
    *=============================================**/
-  /**============================================
+    /**============================================
    *             Mobile Large - 850
 @include respond(break-850) {}
    *=============================================**/
-  /**============================================
+    /**============================================
    *                Tablet - 1000
 @include respond(break-1000) {}
    *=============================================**/
-  /**============================================
+    /**============================================
    *                Monitor Small - 1200
    @include respond(break-1200) {}
    *=============================================**/
-  /**============================================
+    /**============================================
    *                Monitor Medium - 1400
    @include respond(break-1400) {}
    *=============================================**/
-  /**============================================
+    /**============================================
    *                Larger than - 1400
    @include respond(break-greater-1400) {}
    *=============================================**/
-  /**============================================
+    /**============================================
    *                Monitor Medium - 1400
    @include respond(break-1600) {}
    *=============================================**/
-  /**============================================
+    /**============================================
    *                Telvision/Projector > 1800
    @include respond(break-1800) {}
    *=============================================**/ }
-  @media (max-width: 62.5em) {
-    .title {
-      flex-direction: row;
-      align-items: center; } }
-  .title-landing {
-    position: absolute;
-    color: white; }
+    @media (max-width: 62.5em) {
+      .title-landing {
+        flex-direction: row;
+        align-items: center; } }
     .title-landing--prologue {
       bottom: 40%;
       left: 6rem;
@@ -1331,6 +1331,78 @@ h2 {
     color: #333333; }
   .title-chapterTitle {
     text-align: center; }
+    .title-chapterTitle--c5 {
+      /**============================================
+   *             Mobile Small - 600
+@include respond(break-600) {}
+   *=============================================**/
+      /**============================================
+   *             Mobile Large - 850
+@include respond(break-850) {}
+   *=============================================**/
+      /**============================================
+   *                Tablet - 1000
+@include respond(break-1000) {}
+   *=============================================**/
+      /**============================================
+   *                Monitor Small - 1200
+   @include respond(break-1200) {}
+   *=============================================**/
+      /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1400) {}
+   *=============================================**/
+      /**============================================
+   *                Larger than - 1400
+   @include respond(break-greater-1400) {}
+   *=============================================**/
+      /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1600) {}
+   *=============================================**/
+      /**============================================
+   *                Telvision/Projector > 1800
+   @include respond(break-1800) {}
+   *=============================================**/ }
+      @media (min-width: 87.5em) {
+        .title-chapterTitle--c5 {
+          width: 80%; } }
+    .title-chapterTitle--c6 {
+      /**============================================
+   *             Mobile Small - 600
+@include respond(break-600) {}
+   *=============================================**/
+      /**============================================
+   *             Mobile Large - 850
+@include respond(break-850) {}
+   *=============================================**/
+      /**============================================
+   *                Tablet - 1000
+@include respond(break-1000) {}
+   *=============================================**/
+      /**============================================
+   *                Monitor Small - 1200
+   @include respond(break-1200) {}
+   *=============================================**/
+      /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1400) {}
+   *=============================================**/
+      /**============================================
+   *                Larger than - 1400
+   @include respond(break-greater-1400) {}
+   *=============================================**/
+      /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1600) {}
+   *=============================================**/
+      /**============================================
+   *                Telvision/Projector > 1800
+   @include respond(break-1800) {}
+   *=============================================**/ }
+      @media (min-width: 87.5em) {
+        .title-chapterTitle--c6 {
+          width: 50%; } }
   .title-authorName {
     font-size: 1.8rem;
     margin-top: 3rem; }
