--- a/scss/_chapterTemplate.scss
+++ b/scss/_chapterTemplate.scss
@@ -13,6 +13,9 @@ h2 {
   font-size: 10rem;
   font-weight: 300;
   text-transform: uppercase;
+  @include respond(break-1000) {
+    font-size: 5rem;
+  }
 }
 
 .pageContainer {
@@ -322,7 +325,6 @@ h2 {
   }
   &-chapterTitle {
     text-align: center;
-
     &--c5 {
       @include respond(break-greater-1400) {
         width: 80%;
