--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -17,7 +17,7 @@ html {
   color: $color-black;
   font-family: 'Roboto', 'Arial', sans-serif;
   font-size: 62.5%;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 a {
