--- a/scss/_chapterTemplate.scss
+++ b/scss/_chapterTemplate.scss
@@ -210,11 +210,13 @@ h2 {
           url('../img/chapter3-2.jpg');
       }
       @include respond(break-1000) {
+        background-size: contain;
         background-position: 75% 45%;
         background-image: linear-gradient(
             to top,
-            rgba(0, 0, 0, 1) 15%,
-            rgba(0, 0, 0, 0) 25% 55%
+            rgba(0, 0, 0, 1) 35%,
+            rgba(0, 0, 0, 0) 40% 70%,
+            rgba(0, 0, 0, 1) 75%
           ),
           url('../img/chapter3-2.jpg');
       }
