--- a/css/style.css
+++ b/css/style.css
@@ -1058,7 +1058,9 @@ h2 {
     @media (max-width: 62.5em) {
       .title-landing {
         flex-direction: row;
-        align-items: center; } }
+        align-items: center;
+        width: 85%;
+        overflow: hidden; } }
     .title-landing--prologue {
       bottom: 40%;
       left: 6rem;
