--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -27,6 +27,7 @@ $color-dark-cream: rgb(199, 190, 186);
 $color-light-purple: rgb(216, 174, 253);
 $color-purple: rgb(233, 115, 251);
 $color-dark-purple: rgb(50, 43, 102);
+$color-green: rgb(60, 129, 75);
 $color-light-green: rgb(86, 210, 112);
 $color-dark-green: rgb(17, 54, 25);
 $color-yellow: rgb(253, 228, 64);
