--- a/css/style.css
+++ b/css/style.css
@@ -139,9 +139,44 @@ a {
       .topNav-ddMenu--container {
         width: 100%; } }
   .topNav-ddMenu--allLinksContainer {
-    margin: 5rem 0; }
+    margin: 5rem 0;
+    /**============================================
+   *             Mobile Small - 600
+@include respond(break-600) {}
+   *=============================================**/
+    /**============================================
+   *             Mobile Large - 850
+@include respond(break-850) {}
+   *=============================================**/
+    /**============================================
+   *                Tablet - 1000
+@include respond(break-1000) {}
+   *=============================================**/
+    /**============================================
+   *                Monitor Small - 1200
+   @include respond(break-1200) {}
+   *=============================================**/
+    /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1400) {}
+   *=============================================**/
+    /**============================================
+   *                Larger than - 1400
+   @include respond(break-greater-1400) {}
+   *=============================================**/
+    /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1600) {}
+   *=============================================**/
+    /**============================================
+   *                Telvision/Projector > 1800
+   @include respond(break-1800) {}
+   *=============================================**/ }
     .topNav-ddMenu--allLinksContainer > div:not(:first-child) {
       margin-top: 2rem; }
+    @media (max-width: 53.125em) {
+      .topNav-ddMenu--allLinksContainer > div:not(:nth-of-type(2)) {
+        display: none; } }
   .topNav-ddMenu--header {
     width: 100%;
     text-decoration: underline;
@@ -167,12 +202,15 @@ a {
     width: 100%;
     background-color: #5a5a5a;
     transform: translateY(0);
-    transition: transform 0.3s;
-    transition-delay: 0.3s;
+    transition: all 0.3s;
+    transition-delay: transform 0.3s;
+    cursor: pointer;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center; }
+    .topNav-ddMenu--linkContainer:hover {
+      background-color: #3c814b; }
   .topNav-ddMenu--ddArrowContainer {
     position: absolute;
     top: 0;
@@ -348,10 +386,50 @@ a {
   transform: translateX(-50%); }
 
 .list-header {
+  text-transform: none;
   font-size: 1.8rem;
   text-decoration: underline;
   font-weight: 300;
   text-align: center; }
+
+#list-chapters {
+  /**============================================
+   *             Mobile Small - 600
+@include respond(break-600) {}
+   *=============================================**/
+  /**============================================
+   *             Mobile Large - 850
+@include respond(break-850) {}
+   *=============================================**/
+  /**============================================
+   *                Tablet - 1000
+@include respond(break-1000) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Small - 1200
+   @include respond(break-1200) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1400) {}
+   *=============================================**/
+  /**============================================
+   *                Larger than - 1400
+   @include respond(break-greater-1400) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1600) {}
+   *=============================================**/
+  /**============================================
+   *                Telvision/Projector > 1800
+   @include respond(break-1800) {}
+   *=============================================**/ }
+  @media (max-width: 53.125em) {
+    #list-chapters {
+      opacity: 1;
+      width: 100%;
+      transform: translate(0, 0); } }
 
 /**========================================================================
  *                          CREATIVE NONFICTION 
@@ -423,7 +501,7 @@ h1 {
       font-size: 2rem; } }
 
 h2 {
-  font-size: 10rem;
+  font-size: 7rem;
   font-weight: 300;
   text-transform: uppercase;
   /**============================================
@@ -457,7 +535,42 @@ h2 {
   /**============================================
    *                Telvision/Projector > 1800
    @include respond(break-1800) {}
+   *=============================================**/
+  /**============================================
+   *             Mobile Small - 600
+@include respond(break-600) {}
+   *=============================================**/
+  /**============================================
+   *             Mobile Large - 850
+@include respond(break-850) {}
+   *=============================================**/
+  /**============================================
+   *                Tablet - 1000
+@include respond(break-1000) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Small - 1200
+   @include respond(break-1200) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1400) {}
+   *=============================================**/
+  /**============================================
+   *                Larger than - 1400
+   @include respond(break-greater-1400) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1600) {}
+   *=============================================**/
+  /**============================================
+   *                Telvision/Projector > 1800
+   @include respond(break-1800) {}
    *=============================================**/ }
+  @media (min-width: 100em) {
+    h2 {
+      font-size: 10rem; } }
   @media (max-width: 62.5em) {
     h2 {
       font-size: 5rem; } }
@@ -580,14 +693,14 @@ h2 {
    *                Telvision/Projector > 1800
    @include respond(break-1800) {}
    *=============================================**/ }
-    @media (min-width: 87.5em) {
+    @media (min-width: 100em) {
       .chapter-landing--c1 {
         background-image: linear-gradient(to right, black 25%, rgba(0, 0, 0, 0) 25% 75%, black 75%), url("../img/chapter1.jpg"); } }
     @media (max-width: 62.5em) {
       .chapter-landing--c1 {
         background-image: linear-gradient(to top, black 15%, rgba(0, 0, 0, 0) 25% 55%), url("../img/chapter1.jpg"); } }
   .chapter-landing--c2 {
-    background-image: linear-gradient(to right, black 0 25%, rgba(0, 0, 0, 0) 30%), url("../img/chapter2.jpg");
+    background-image: linear-gradient(to right, black 0 25%, rgba(0, 0, 0, 0) 30% 90%, black 95%), url("../img/chapter2.jpg");
     background-repeat: no-repeat;
     background-position: 50% 45%;
     /**============================================
@@ -654,7 +767,7 @@ h2 {
    *                Telvision/Projector > 1800
    @include respond(break-1800) {}
    *=============================================**/ }
-    @media (min-width: 87.5em) {
+    @media (min-width: 100em) {
       .chapter-landing--c2 {
         background-position: 0% 45%;
         background-image: linear-gradient(to right, black 20%, rgba(0, 0, 0, 0) 25% 55%, black 78%), url("../img/chapter2.jpg"); } }
@@ -664,7 +777,7 @@ h2 {
         background-size: cover;
         background-image: linear-gradient(to top, black 15%, rgba(0, 0, 0, 0) 25% 55%), url("../img/chapter2.jpg"); } }
   .chapter-landing--c3 {
-    background-image: linear-gradient(to right, black 0 20%, rgba(0, 0, 0, 0) 25%), url("../img/chapter3.jpg");
+    background-image: linear-gradient(to right, black 0 25%, rgba(0, 0, 0, 0) 30% 90%, black 95%), url("../img/chapter3.jpg");
     background-repeat: no-repeat;
     background-position: 50% 45%;
     /**============================================
@@ -731,7 +844,7 @@ h2 {
    *                Telvision/Projector > 1800
    @include respond(break-1800) {}
    *=============================================**/ }
-    @media (min-width: 87.5em) {
+    @media (min-width: 100em) {
       .chapter-landing--c3 {
         background-image: linear-gradient(to right, black 25%, rgba(0, 0, 0, 0) 30% 80%, black 85%), url("../img/chapter3.jpg"); } }
     @media (max-width: 62.5em) {
@@ -805,7 +918,7 @@ h2 {
    *                Telvision/Projector > 1800
    @include respond(break-1800) {}
    *=============================================**/ }
-    @media (min-width: 87.5em) {
+    @media (min-width: 100em) {
       .chapter-landing--c4 {
         background-image: linear-gradient(to right, black 35%, rgba(0, 0, 0, 0) 45% 65%, black 75%), url("../img/chapter4.jpg"); } }
     @media (max-width: 62.5em) {
@@ -879,14 +992,14 @@ h2 {
    *                Telvision/Projector > 1800
    @include respond(break-1800) {}
    *=============================================**/ }
-    @media (min-width: 87.5em) {
+    @media (min-width: 100em) {
       .chapter-landing--c5 {
         background-image: linear-gradient(to right, black 25%, rgba(0, 0, 0, 0) 30% 70%, black 75%), url("../img/chapter5.jpg"); } }
     @media (max-width: 62.5em) {
       .chapter-landing--c5 {
         background-image: linear-gradient(to top, black 15%, rgba(0, 0, 0, 0) 25% 55%), url("../img/chapter5.jpg"); } }
   .chapter-landing--c6 {
-    background-image: linear-gradient(to right, black 0 20%, rgba(0, 0, 0, 0) 25%), url("../img/chapter3-2.jpg");
+    background-image: linear-gradient(to right, black 0 25%, rgba(0, 0, 0, 0) 30% 90%, black 95%), url("../img/chapter3-2.jpg");
     background-repeat: no-repeat;
     background-position: 50% 45%;
     /**============================================
@@ -953,7 +1066,7 @@ h2 {
    *                Telvision/Projector > 1800
    @include respond(break-1800) {}
    *=============================================**/ }
-    @media (min-width: 87.5em) {
+    @media (min-width: 100em) {
       .chapter-landing--c6 {
         background-position: 0% 45%;
         background-image: linear-gradient(to right, black 20%, rgba(0, 0, 0, 0) 25% 65%, black 78%), url("../img/chapter3-2.jpg"); } }
@@ -964,7 +1077,7 @@ h2 {
         background-image: linear-gradient(to top, black 35%, rgba(0, 0, 0, 0) 40% 70%, black 75%), url("../img/chapter3-2.jpg"); } }
 
 .chapter-content {
-  margin: 3rem auto;
+  margin: 0rem auto;
   width: 40%;
   display: flex;
   flex-direction: column;
@@ -1369,7 +1482,15 @@ h2 {
     color: #333333; }
   .title-chapterTitle {
     text-align: center; }
+    .title-chapterTitle--c2 {
+      text-align: left;
+      width: 60%; }
+    .title-chapterTitle--c4 {
+      text-align: left;
+      width: 60%; }
     .title-chapterTitle--c5 {
+      text-align: left;
+      width: 60%;
       /**============================================
    *             Mobile Small - 600
 @include respond(break-600) {}
@@ -1402,10 +1523,12 @@ h2 {
    *                Telvision/Projector > 1800
    @include respond(break-1800) {}
    *=============================================**/ }
-      @media (min-width: 87.5em) {
+      @media (min-width: 100em) {
         .title-chapterTitle--c5 {
           width: 80%; } }
     .title-chapterTitle--c6 {
+      width: 40%;
+      text-align: left;
       /**============================================
    *             Mobile Small - 600
 @include respond(break-600) {}
@@ -1438,7 +1561,7 @@ h2 {
    *                Telvision/Projector > 1800
    @include respond(break-1800) {}
    *=============================================**/ }
-      @media (min-width: 87.5em) {
+      @media (min-width: 100em) {
         .title-chapterTitle--c6 {
           width: 50%; } }
   .title-authorName {
@@ -1507,3 +1630,11 @@ h2 {
   .footer-logo {
     position: absolute;
     left: 1rem; }
+
+.pointerEvents-none {
+  pointer-events: none; }
+  .pointerEvents-none > * {
+    pointer-events: none; }
+
+#scrollAdhoc {
+  padding: 4rem 0; }
