--- a/scss/_chapterTemplate.scss
+++ b/scss/_chapterTemplate.scss
@@ -10,9 +10,12 @@ h1 {
 }
 
 h2 {
-  font-size: 10rem;
+  font-size: 7rem;
   font-weight: 300;
   text-transform: uppercase;
+  @include respond(break-greater-1600) {
+    font-size: 10rem;
+  }
   @include respond(break-1000) {
     font-size: 5rem;
   }
@@ -59,7 +62,7 @@ h2 {
         url('../img/chapter1.jpg');
       background-repeat: no-repeat;
       background-position: 50% 45%;
-      @include respond(break-greater-1400) {
+      @include respond(break-greater-1600) {
         background-image: linear-gradient(
             to right,
             rgba(0, 0, 0, 1) 25%,
@@ -81,12 +84,13 @@ h2 {
       background-image: linear-gradient(
           to right,
           rgba(0, 0, 0, 1) 0 25%,
-          rgba(0, 0, 0, 0) 30%
+          rgba(0, 0, 0, 0) 30% 90%,
+          rgba(0, 0, 0, 1) 95%
         ),
         url('../img/chapter2.jpg');
       background-repeat: no-repeat;
       background-position: 50% 45%;
-      @include respond(break-greater-1400) {
+      @include respond(break-greater-1600) {
         background-position: 0% 45%;
         background-image: linear-gradient(
             to right,
@@ -110,13 +114,14 @@ h2 {
     &--c3 {
       background-image: linear-gradient(
           to right,
-          rgba(0, 0, 0, 1) 0 20%,
-          rgba(0, 0, 0, 0) 25%
+          rgba(0, 0, 0, 1) 0 25%,
+          rgba(0, 0, 0, 0) 30% 90%,
+          rgba(0, 0, 0, 1) 95%
         ),
         url('../img/chapter3.jpg');
       background-repeat: no-repeat;
       background-position: 50% 45%;
-      @include respond(break-greater-1400) {
+      @include respond(break-greater-1600) {
         background-image: linear-gradient(
             to right,
             rgba(0, 0, 0, 1) 25%,
@@ -144,7 +149,7 @@ h2 {
         url('../img/chapter4.jpg');
       background-repeat: no-repeat;
       background-position: 50% 45%;
-      @include respond(break-greater-1400) {
+      @include respond(break-greater-1600) {
         background-image: linear-gradient(
             to right,
             rgba(0, 0, 0, 1) 35%,
@@ -172,7 +177,7 @@ h2 {
         url('../img/chapter5.jpg');
       background-repeat: no-repeat;
       background-position: 50% 45%;
-      @include respond(break-greater-1400) {
+      @include respond(break-greater-1600) {
         background-image: linear-gradient(
             to right,
             rgba(0, 0, 0, 1) 25%,
@@ -193,13 +198,14 @@ h2 {
     &--c6 {
       background-image: linear-gradient(
           to right,
-          rgba(0, 0, 0, 1) 0 20%,
-          rgba(0, 0, 0, 0) 25%
+          rgba(0, 0, 0, 1) 0 25%,
+          rgba(0, 0, 0, 0) 30% 90%,
+          rgba(0, 0, 0, 1) 95%
         ),
         url('../img/chapter3-2.jpg');
       background-repeat: no-repeat;
       background-position: 50% 45%;
-      @include respond(break-greater-1400) {
+      @include respond(break-greater-1600) {
         background-position: 0% 45%;
         background-image: linear-gradient(
             to right,
@@ -224,7 +230,7 @@ h2 {
   }
 
   &-content {
-    margin: 3rem auto;
+    margin: 0rem auto;
     width: 40%;
     display: flex;
     flex-direction: column;
@@ -329,13 +335,31 @@ h2 {
   }
   &-chapterTitle {
     text-align: center;
+    &--prologue {
+    }
+    &--c1 {
+    }
+    &--c2 {
+      text-align: left;
+      width: 60%;
+    }
+    &--c3 {
+    }
+    &--c4 {
+      text-align: left;
+      width: 60%;
+    }
     &--c5 {
-      @include respond(break-greater-1400) {
+      text-align: left;
+      width: 60%;
+      @include respond(break-greater-1600) {
         width: 80%;
       }
     }
     &--c6 {
-      @include respond(break-greater-1400) {
+      width: 40%;
+      text-align: left;
+      @include respond(break-greater-1600) {
         width: 50%;
       }
     }
@@ -383,4 +407,15 @@ h2 {
 
   &-contact {
   }
+}
+
+.pointerEvents-none {
+  pointer-events: none;
+
+  & > * {
+    pointer-events: none;
+  }
+}
+#scrollAdhoc {
+  padding: 4rem 0;
 }
