--- a/scss/_chapterTemplate.scss
+++ b/scss/_chapterTemplate.scss
@@ -5,7 +5,7 @@
 h1 {
   font-size: 5rem;
   @include respond(break-1000) {
-    font-size: 2rem;
+    font-size: 4rem;
   }
 }
 
@@ -33,21 +33,22 @@ h2 {
     &--prologue {
       background-image: linear-gradient(
           to right,
-          rgba(0, 0, 0, 1) 15%,
+          rgba(0, 0, 0, 1) 20%,
           rgba(0, 0, 0, 0) 25% 75%,
-          rgba(0, 0, 0, 1) 85%
+          rgba(0, 0, 0, 1) 80%
         ),
         url('../img/prologue.jpg');
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
       @include respond(break-1000) {
-        background-size: cover;
+        background-size: contain;
         background-position: 60% 45%;
         background-image: linear-gradient(
             to top,
-            rgba(0, 0, 0, 1) 15%,
-            rgba(0, 0, 0, 0) 25% 55%
+            rgba(0, 0, 0, 1) 25%,
+            rgba(0, 0, 0, 0) 30% 75%,
+            rgba(0, 0, 0, 1) 80%
           ),
           url('../img/prologue.jpg');
       }
@@ -266,8 +267,9 @@ h2 {
     position: absolute;
     color: $color-white;
     @include respond(break-1000) {
-      flex-direction: row;
       align-items: center;
+      justify-content: space-between;
+      height: 90%;
       width: 85%;
       overflow: hidden;
     }
@@ -384,6 +386,7 @@ h2 {
       background-color: $color-dark-gray;
     }
     @include respond(break-1000) {
+      margin-left: 1rem;
     }
   }
 }
@@ -418,4 +421,26 @@ h2 {
 }
 #scrollAdhoc {
   padding: 4rem 0;
+}
+
+.prologue-mobile {
+  @include respond(break-1000) {
+    display: flex;
+    & > h1:not(:first-child) {
+      margin-left: 1rem;
+    }
+  }
+}
+.prologue-mobile2 {
+  display: flex;
+  flex-direction: column;
+  @include respond(break-1000) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    & button {
+      margin-top: 1rem;
+    }
+  }
 }
