--- a/scss/_chapterTemplate.scss
+++ b/scss/_chapterTemplate.scss
@@ -33,9 +33,9 @@ h2 {
     &--prologue {
       background-image: linear-gradient(
           to right,
-          rgba(0, 0, 0, 1) 20%,
-          rgba(0, 0, 0, 0) 25% 75%,
-          rgba(0, 0, 0, 1) 80%
+          rgba(0, 0, 0, 1) 25%,
+          rgba(0, 0, 0, 0) 30% 80%,
+          rgba(0, 0, 0, 1) 85%
         ),
         url('../img/prologue.jpg');
       background-size: contain;
@@ -270,7 +270,7 @@ h2 {
       align-items: center;
       justify-content: space-between;
       height: 90%;
-      width: 85%;
+      width: 100%;
       overflow: hidden;
     }
     &--prologue {
@@ -326,7 +326,7 @@ h2 {
       margin-top: 1rem;
       @include respond(break-1000) {
         margin-top: 0;
-        margin-left: 1rem;
+        margin-left: 0rem;
       }
     }
   }
@@ -369,6 +369,9 @@ h2 {
   &-authorName {
     font-size: 1.8rem;
     margin-top: 3rem;
+    @include respond(break-1000) {
+      margin-top: 0rem;
+    }
   }
   &-btn {
     font-size: 1.5rem;
@@ -386,7 +389,6 @@ h2 {
       background-color: $color-dark-gray;
     }
     @include respond(break-1000) {
-      margin-left: 1rem;
     }
   }
 }
@@ -426,8 +428,8 @@ h2 {
 .prologue-mobile {
   @include respond(break-1000) {
     display: flex;
+    flex-direction: column;
     & > h1:not(:first-child) {
-      margin-left: 1rem;
     }
   }
 }
