Second round of mobile touches 3

--- a/css/style.css
+++ b/css/style.css
@@ -624,7 +624,7 @@ h2 {
       .chapter-landing--prologue {
         background-size: contain;
         background-position: 60% 45%;
-        background-image: linear-gradient(to top, black 25%, rgba(0, 0, 0, 0) 30% 75%, black 80%), url("../img/prologue.jpg"); } }
+        background-image: linear-gradient(to top, black 30%, rgba(0, 0, 0, 0) 35% 70%, black 75%), url("../img/prologue.jpg"); } }
   .chapter-landing--c1 {
     background-image: linear-gradient(to right, black 0 35%, rgba(0, 0, 0, 0) 40% 55%, black 85%), url("../img/chapter1.jpg");
     background-repeat: no-repeat;
@@ -1136,6 +1136,7 @@ h2 {
   .title-landing {
     position: absolute;
     color: white;
+    width: 90%;
     /**============================================
    *             Mobile Small - 600
 @include respond(break-600) {}
