--- a/scss/_chapterTemplate.scss
+++ b/scss/_chapterTemplate.scss
@@ -268,11 +268,8 @@ h2 {
     color: $color-white;
     width: 90%;
     @include respond(break-1000) {
-      top: 50%;
-      transform: translateY(-50%);
+      top: 1rem;
       align-items: center;
-      justify-content: space-between;
-      height: 75%;
       width: 80%;
       overflow: hidden;
     }
